# SecondOrderConsensusSimulation

./: .gitignore  README.md  delbono_configuration.sh  frames.gv  kobra_compl.launch  willowgarage_world_autonomous.launch  willowgarage_world_manual.launch  willowgarage_world_mapping.launch
devel/: .catkin  .rosinstall  setup.sh
devel/include/delbono_kobra/: OdomInfo.h  Ptz.h
devel/share/common-lisp/ros/delbono_kobra/msg/: OdomInfo.lisp  _package.lisp  _package_OdomInfo.lisp  _package_Ptz.lisp
devel/share/delbono_kobra/cmake/: delbono_kobra-msg-extras.cmake  delbono_kobra-msg-paths.cmake  delbono_kobraConfig.cmake
devel/share/roseus/ros/delbono_kobra/: manifest.l
devel/share/roseus/ros/delbono_kobra/msg/: OdomInfo.l  Ptz.l
install/: .rosinstall  setup.sh
install/share/common-lisp/ros/delbono_kobra/msg/: Ptz.lisp  delbono_kobra-msg.asd
install/share/common-lisp/ros/delbono_kobra/srv/: GetGoal.lisp  _package.lisp  _package_GetGoal.lisp  delbono_kobra-srv.asd
install/share/delbono_kobra/: package.xml
install/share/delbono_kobra/cmake/: delbono_kobra-msg-extras.cmake  delbono_kobra-msg-paths.cmake  delbono_kobraConfig.cmake
install/share/delbono_kobra/msg/: Ptz.msg
install/share/gennodejs/ros/delbono_kobra/msg/: OdomInfo.js  Ptz.js  _index.js
install/share/gennodejs/ros/delbono_kobra/srv/: GetGoal.js
install/share/roseus/ros/delbono_kobra/: manifest.l
install/share/roseus/ros/delbono_kobra/srv/: GetGoal.l
src/delbono_kobra/: CMakeLists.txt  package.xml
src/delbono_kobra/maps/: DelbonoKobraMap.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  destinations.txt  global_costmap_params.yaml  local_costmap_params.yaml
src/delbono_kobra/models/DelbonoKobra/: model.config  model.sdf
src/delbono_kobra/models/DelbonoKobraCompl/: model.config  model.sdf
src/delbono_kobra/models/myHokuyo/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
src/delbono_kobra/msg/: OdomInfo.msg
src/delbono_kobra/plugins/: CMakeLists.txt  diff_drive_plugin.cc  pan_tilt_camera_plugin.cc
src/delbono_kobra/src/: actionlib_planner.cpp  formation_controller.cpp  move_base_commands_converter.cpp  teleop_joy.cpp  tf_camera_transforms.cpp  tf_pose_publisher.cpp  tf_pose_publisher_compl.cpp
src/delbono_kobra/worlds/: hello.world
